# Fedot.Industrial

./: .codecov.yml  .gitattributes  .gitignore  .pep8speaks.yml  .readthedocs.yml  LICENSE.md  MANIFEST.in  README.md  README.rst  README_en.md  README_en.rst  log.csv  logs.json  pyproject.toml  req.txt  requirements.txt  setup.py  some.py
.codex/: skills-smoke-suite.md
.codex/skills-src/: smoke-prompts.md
.github/: README.md
.github/workflows/: conventional-pr.yml  integration_tests.yml  mirror.yml  mirror_repo_to_gitlab.yml  pep8_action.yml  poetry_unit_test.yml  pypi_release.yml  python-publish.yml  unit_testing.yml  unit_tests.yml
AAAI_reproducibility/: classification.py  forecasting.py  regression.py
benchmark/: __init__.py  abstract_bench.py  analyze_kernel_learning_stage1.py  automl_forecasting.py  average_metrics.ipynb  bench.py  bench_TSC.py  benchmark_TSC.py  benchmark_TSER.py  benchmark_TSF.py  feature_utils.py  m4_analysis.ipynb  make_tser_table.py  run_kernel_learning_forecasting.py  run_kernel_learning_tser.py  run_kernel_learning_ucr.py  run_kernel_learning_ucr_two_stage.py  run_pdl_small_multiclass_ucr.py  run_tser_aeon.py  run_tser_single.py  ts_regression_sota_results.csv
benchmark/experiments/: __init__.py
benchmark/industrial/: __init__.py  api.py  classification.py  cli.py  core.py  errors.py  forecasting.py  regression.py
benchmark/results/: README.md  full_uni_clf_comparison.csv  multivariate_results.csv  regression_table.csv  results_ucr.csv  time_series_multI_clf_comparasion.csv  time_series_uni_clf_comparison.csv  uni_clf.csv
benchmark/v2/: __init__.py  analytics.py  api.py  artifacts.py  classification.py  cli.py  core.py  detection.py  forecasting.py  forecasting_result.py  incremental_persistence.py  kernel_artifacts.py  kernel_learning_analysis.py  local_io.py  manifests.py  okhs_quality.py  presets.py  probabilistic_metrics.py  registry.py  regression.py  result_visualization.py  run_compare.py  verbosity.py
cases/: API.py  analyzer.py  anomaly_detection_experiment.py  classification_experiment.py  quantile_experiment.py  signal_experiment.py  topological_experiment.py  utils.py
cases/anomaly_detection/: .~lock.log.csv#  Alexander_test.py  Alexandr_test.py  ReportTestAleksandrEdited.py  SKAB_experiment.py  SSTdetector.py  WSSAlgorithms.py  WSS_experiment_SKAB.ipynb  WSS_experiment_local_data.ipynb  WSS_expirement_local_data.ipynb  anomaly_detection_basic.ipynb  json_read.py  log.csv  log_1.csv  logs.json  real_data_test.py  test_detector.py  Отчет по алгоритму SST с SVD на примере геофизических данных.py
cases/config/: ConfigAll.yaml  Config_Classification.yaml
cases/ensemble_experiment/: 1.basic_example.py  2.advanced_example.py  RankEnsemble_example.py
cases/for_test/: Chaos_case.py
cases/notebook_examples/: object_detection_example.ipynb
cases/object_recognition/: ALET_detection.ipynb  agricultural-crops_classification.ipynb  classification_example.ipynb  detection_example.ipynb  land-use_scene_classification.ipynb  run_CIFAR100_ResNet18_experiment.py  run_MNIST_experiment.py  run_classificatin_experiment.py  run_detection_experiment.py  run_experiment.py  show_results.ipynb  utils.py  visualization_utils.py
cases/run/: EnsembleRunner.py  ExperimentRunner.py  QuantileRunner.py  SSARunner.py  SignalRunner.py  TimeSeriesClassifier.py  TopologicalRunner.py  ts_clf.py  utils.py
cases/ts_classification/: Chaos_case.py  (+7 more)
core/: TimeSeriesClassifier.py  log.py  utils.py
dockerizer/: docker_maker.py  docker_riser.py  predict.py  requirements_docker.txt
docs/: README.md  make.bat  requirements.txt
examples/: README.md  example_utils.py  explainability.ipynb  fedot_ex.py  okhs_pretrained_encoder_example.py
experiments/: analyzer.py  classification_experiment.py  get_report.py  topological_experiment.py  ts_clf.py
fedot_ind/: __init__.py
fedot_ind/core/models/pdl/: __init__.py  aggregators.py  anchors.py  config.py  contracts.py  diagnostics.py  legacy_pairwise_transform.py  pair_features.py  pair_targets.py  pairwise_core.py  pairwise_model.py  pairwise_transform.py  pdl_model_registry.py  pyproject.toml  samplers.py  strategies.py
metrics/: metrics_implementation.py
saved_models/: deep_kernel_weights.pth
test/: test_read.py
tests/: test_read_tsv.py  test_reqs.txt
uml/: uml.py  your_file.puml
utils/: reporter.py  results_parser.py  utils.py
(+9294 files in other folders)
