[tool.poetry]
name = "fedot-ind"
version = "0.4.2"
description = "Time series analysis framework"
authors = ["NSS Lab <itmo.nss.team@gmail.com>"]
license = "BSD 3-Clause"
readme = "README_en.rst"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
fedot = "^0.7.3.1"
catboost = {version = "1.1.1", markers = "sys_platform == 'darwin'"}
mklpy = "0.6"
PyMonad = "2.4.0"
PyWavelets = "1.4.1"
giotto_tda = "0.6.0"
ripser = "0.6.4"
fastcore = "~1.5.29"
fastai = "~2.7.14"
distributed = "~2023.12.0"
datasetsforecast = "~0.0.8"
tensorly = "0.8.1"
torch = "~2.2.0"
torchvision = "~0.17.0"
statsforecast = "1.5.0"
chardet = "~5.2.0"
matplotlib = "~3.8.2"
scipy = ">=1.10.0"
sktime = ">=0.16.1"
tqdm = "~4.65.2"
librosa = "~0.10.1"
pillow = "~10.2.0"
pyriemann = "~0.5"
seaborn = "~0.13.2"
datasets = "^2.18.0"

[tool.poetry.group.docs.dependencies]
sphinx-rtd-theme = "^2.0.0"
sphinx = "^7.3.7"
autodocsumm = "^0.2.12"

[tool.poetry.group.test.dependencies]
pytest = "~8.0.0"
pytest-cov = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
