[tool.poetry]
name = "fedot-ind"
version = "0.4.3"
description = "Time series analysis framework"
authors = ["NSS Lab <itmo.nss.team@gmail.com>"]
license = "BSD 3-Clause"
readme = "README_en.rst"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
catboost = [
    {version = "1.1.1", markers = "sys_platform == 'darwin'"},
    {version = "*", markers = "sys_platform != 'darwin'"}
]
fedot = "^0.7.3"
torch = "~2.2.0"
torchvision = "~0.17.0"
chardet = "~5.2.0"
tensorly = "0.8.1"
pymonad = "2.4.0"
pywavelets = "1.4.1"
giotto-tda = "^0.6.0"
fastcore = "~1.5.29"
fastai = "~2.7.14"
sktime = ">=0.16.1"
distributed = "~2023.12.0"
mklpy = "0.6"
librosa = "~0.10.1"
pyriemann = "~0.5"
pyarrow = "15.0.1"
datasetsforecast = "^0.0.8"
datasets = "^2.19.2"
matplotlib = "~3.8.2"
numpy = "1.23.2"
pytest-cov = "^5.0.0"
spectrum = "^0.8.1"
scikit-tda = "^1.1.1"
dask-ml = "^2024.4.4"
optuna-integration = "^4.0.0"


[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "if __debug__:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    "except Exception",
    "if verbose:",
    "if self.verbose:",
    "if self.print_training_progress:"
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
